# CTest

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bitmap/: CMakeLists.txt  bitmap-change.cpp  bitmap_utils.cpp  bitmap_utils.h
app/src/main/cpp/four/: CMakeLists.txt  floor-lib.cpp
app/src/main/cpp/one/: CMakeLists.txt  Facer.cpp  Facer.h  facer_lib.cpp
app/src/main/cpp/pwd/: CMakeLists.txt  com_example_c_bean_EntryUtils.h  pwd_lib.cpp
app/src/main/cpp/there/: CMakeLists.txt  compute-lib.cpp
app/src/main/cpp/two/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/c/: Facer.java  MainActivity.java
app/src/main/java/com/example/c/bean/: BitmapUtils.java  EntryUtils.java
app/src/main/java/com/example/c/ui/: BitmapActivity.java  BitmapChangeActivity.java  ComputeActivity.java  DESActivity.java  FaceActivity.java  HelloActivity.java
app/src/main/res/layout/: activity_main.xml  layout_bitmap.xml  layout_bitmap_change.xml  layout_compute.xml  layout_des.xml  layout_face.xml  layout_hello.xml
gradle/wrapper/: gradle-wrapper.properties
